--- a/requirements.txt
+++ b/requirements.txt
@@ -1,19 +1,58 @@
-appdirs==1.4.4
-asgiref==3.2.5
-certifi==2020.6.20
-Command==0.1.0
-distlib==0.3.0
-dj-database-url==0.5.0
-Django==3.0.4
-django-analytical==2.5.0
-django-heroku==0.3.1
-filelock==3.0.12
-gunicorn==20.0.4
-pipenv==2020.6.2
-psycopg2==2.8.4
-pytz==2019.3
-six==1.15.0
-sqlparse==0.3.1
-virtualenv==20.0.25
-virtualenv-clone==0.5.4
-whitenoise==5.0.1
+asgiref==3.7.2
+awscli==1.25.1
+awsebcli==3.20.5
+boto3==1.24.1
+botocore==1.27.1    
+build==1.0.3
+cement==2.8.2
+certifi==2023.7.22
+cffi==1.16.0
+charset-normalizer==2.0.12
+colorama==0.4.3
+crispy-bootstrap4==2023.1
+cryptography==41.0.5
+defusedxml==0.7.1
+Django==4.2.7
+django-allauth==0.58.2
+django-crispy-forms==2.1
+django-ses==3.5.1
+django-storages==1.14.2
+docutils==0.16
+idna==3.6
+importlib-metadata==6.9.0
+jaraco.classes==3.3.0
+jmespath==1.0.1
+markdown-it-py==3.0.0
+mdurl==0.1.2
+more-itertools==10.1.0
+nh3==0.2.14
+oauthlib==3.2.2
+packaging==23.2
+pathspec==0.10.1
+Pillow==10.1.0
+pyasn1==0.5.1
+pycparser==2.21
+Pygments==2.17.2
+PyJWT==2.8.0
+PyMySQL==1.1.0
+pyproject_hooks==1.0.0
+python-dateutil==2.8.2
+python3-openid==3.2.0
+pytz==2023.3.post1
+PyYAML==5.3.1
+readme-renderer==42.0
+requests==2.26.0
+requests-oauthlib==1.3.1
+requests-toolbelt==1.0.0
+rfc3986==2.0.0
+rich==13.7.0
+rsa==4.7.2
+s3transfer==0.6.2
+semantic-version==2.8.5
+six==1.14.0
+sqlparse==0.4.4
+termcolor==1.1.0
+tzdata==2023.3
+urllib3==1.26.18
+wcwidth==0.1.9
+zipp==3.17.0
